--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-dynamodb": "^3.730.0",
     "@aws-sdk/client-rekognition": "^3.730.0",
     "@aws-sdk/client-s3": "^3.730.0",
+    "@aws-sdk/client-lambda": "^3.x",
     "@aws-sdk/client-secrets-manager": "^3.730.0",
     "@aws-sdk/lib-dynamodb": "^3.730.0",
     "axios": "^1.7.9",
